# klarna-ds-case-study

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
data/models/: .gitignore  best_xgb_params.json
data/models/serving_model/: MLmodel  conda.yaml  model.skops  requirements.txt
notebooks/: 01_eda_and_quality.py  02_modeling_experiments.py  03_portfolio_analysis.py  04_feature_analysis.py  05_shap_and_monotonicity.py
reports/: DEVELOPMENT.md
src/klarna_ds_case_study/data_processing/: config.py  main.py  pipeline.py  schemas.py  utils.py
src/klarna_ds_case_study/serving/: app.py
src/klarna_ds_case_study/training/: config.py  main.py  pipeline.py  tracking.py
tests/: conftest.py  test_pipeline_integration.py  test_pipeline_unit.py  test_serving.py  test_training_unit.py
