[project]
name = "klarna-ds-case-study"
version = "0.1.0"
description = "Machine learning classification case study for the Data Science interview at Klarna"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow-skinny>=3.12.0",
    "optuna>=4.0.0",
    "pandas>=3.0.3",
    "pandera[polars]>=0.25.0",
    "polars>=1.41.2",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.9",
    "plotly>=6.8.0",
    "pre-commit>=4.6.0",
    "pydantic-ai>=1.107.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

