[project]
name = "klarna-ds-case-study"
version = "0.1.0"
description = "Machine learning classification case study for the Data Science interview at Klarna"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "mlflow>=3.14.0",
    "optuna>=4.9.0",
    "pandas>=2.3.0,<3",
    "pydantic>=2.0.0",
    "pandera[polars]>=0.31.0",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pandas-stubs~=2.3.3",
    "httpx>=0.28.0",
    "marimo>=0.23.9",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "shap>=0.52.0",
    "pydantic-ai-slim>=1.107.0",
    "openai>=2.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klarna_ds_case_study"]

[tool.pytest.ini_options]
pythonpath = ["src"]
